Treat special days as processing days if they are workdays

The holiday list contains entries that shows special events that are
working days. Nevertheless, KMyMoney treated them as non processing
days.

This change makes sure to treat those entries as processing days.

BUG: 407800
FIXED-IN: 5.0.5